@@ -1,5 +1,3 @@
-	v0:= calc.oid(20000000);
-	v1:= calc.setoid(v0);
 	v2:= bat.new(:str);
 	b := v2;
 
