@@ -606,30 +606,6 @@ CMDvarDECRsignal(Client cntxt, MalBlkPtr mb, MalStkPtr stk, InstrPtr pci)
 	return MAL_SUCCEED;
 }
 
-mal_export str CMDsetoid(Client cntxt, MalBlkPtr mb, MalStkPtr stk, InstrPtr pci);
-
-str
-CMDsetoid(Client cntxt, MalBlkPtr mb, MalStkPtr stk, InstrPtr pci)
-{
-	(void) cntxt;
-	(void) mb;
-
-	switch (getArgType(mb, pci, 1)) {
-	case TYPE_int:
-		OIDbase((oid) * getArgReference_int(stk, pci, 1));
-		break;
-	case TYPE_oid:
-		OIDbase(*getArgReference_oid(stk, pci, 1));
-		break;
-	case TYPE_lng:
-		OIDbase((oid) * getArgReference_lng(stk, pci, 1));
-		break;
-	default:
-		return mythrow(MAL, "calc.setoid", ILLEGAL_ARGUMENT);
-	}
-	return MAL_SUCCEED;
-}
-
 mal_export str CALCswitchbit(Client cntxt, MalBlkPtr mb, MalStkPtr stk, InstrPtr p);
 
 str
