@@ -7261,9 +7261,6 @@ Ready.
 [ "calc",	"second_interval",	"command calc.second_interval(v:daytime,ek:int,sk:int):lng ",	"second_interval_daytime;",	"cast daytime to a second_interval and check for overflow"	]
 [ "calc",	"second_interval",	"command calc.second_interval(v:str,ek:int,sk:int):lng ",	"second_interval_str;",	"cast str to a second_interval and check for overflow"	]
 [ "calc",	"second_interval",	"command calc.second_interval(sc:int,v:sht,ek:int,sk:int):lng ",	"sht_dec2second_interval;",	"cast sht decimal to a second_interval"	]
-[ "calc",	"setoid",	"pattern calc.setoid(v:int):void ",	"CMDsetoid;",	""	]
-[ "calc",	"setoid",	"pattern calc.setoid(v:lng):void ",	"CMDsetoid;",	""	]
-[ "calc",	"setoid",	"pattern calc.setoid(v:oid):void ",	"CMDsetoid;",	""	]
 [ "calc",	"sht",	"pattern calc.sht(v:bit):sht ",	"CMDvarCONVERT;",	"Cast VALUE to sht"	]
 [ "calc",	"sht",	"pattern calc.sht(v:bte):sht ",	"CMDvarCONVERT;",	"Cast VALUE to sht"	]
 [ "calc",	"sht",	"pattern calc.sht(v:dbl):sht ",	"CMDvarCONVERT;",	"Cast VALUE to sht"	]
