@@ -304,9 +304,7 @@ int MT_munmap(void *p, size_t len);
 int MT_path_absolute(const char *path);
 void MT_sleep_ms(unsigned int ms);
 void OIDXdestroy(BAT *b);
-oid OIDbase(oid base);
 int OIDfromStr(const char *src, int *len, oid **dst);
-oid OIDnew(oid inc);
 int OIDtoStr(str *dst, int *len, const oid *src);
 BUN ORDERfnd(BAT *b, const void *v);
 BUN ORDERfndfirst(BAT *b, const void *v);
@@ -1080,7 +1078,6 @@ str CMDscience_cst_bat_pow_dbl(bat *ret, const dbl *d, const bat *bid);
 str CMDscience_cst_bat_pow_flt(bat *ret, const flt *d, const bat *bid);
 str CMDsetHeartbeat(void *res, int *ev);
 str CMDsetName(str *rname, const bat *b, str *name);
-str CMDsetoid(Client cntxt, MalBlkPtr mb, MalStkPtr stk, InstrPtr pci);
 str CMDsetprofilerlimit(void *res, int *lim);
 str CMDstartProfiler(Client cntxt, MalBlkPtr mb, MalStkPtr stk, InstrPtr pci);
 str CMDstartTrace(void *res);
