@@ -1759,130 +1759,6 @@ strWrite(const char *a, stream *s, size_t cnt)
 }
 
 /*
- * @+ Unique OIDs
- * The basic type OID represents unique values. Refinements should be
- * considered to link oids in time order.
- *
- * Values start from the "seqbase" (usually 0@0). A nil seqbase makes
- * the entire column nil.  Monet's BUN access methods
- * BUNhead(b,p)/BUNtail(b,p) instantiate a value on-the-fly by looking
- * at the position p in BAT b.
- */
-static volatile ATOMIC_TYPE GDKoid;
-#ifdef ATOMIC_LOCK
-static MT_Lock GDKoidLock MT_LOCK_INITIALIZER("GDKoidLock");
-#endif
-static oid GDKflushed;		/* protected by MT_system_lock */
-
-/*
- * Make up some new OID for a specified database, based on the current
- * time.
- */
-static oid
-OIDrand(void)
-{
-	return 1000000;
-}
-
-/*
- * Init the shared array of oid bases.
- */
-int
-OIDinit(void)
-{
-#ifdef NEED_MT_LOCK_INIT
-	ATOMIC_INIT(GDKoidLock);
-#endif
-	GDKflushed = 0;
-	GDKoid = OIDrand();
-	assert(oid_nil == * (const oid *) ATOMnilptr(TYPE_oid));
-	return 0;
-}
-
-/*
- * Initialize the current OID number to be starting at 'o'.
- */
-oid
-OIDbase(oid o)
-{
-	ATOMIC_SET(GDKoid, (ATOMIC_TYPE) o, GDKoidLock);
-	return o;
-}
-
-static oid
-OIDseed(oid o)
-{
-	oid t, p = (oid) ATOMIC_GET(GDKoid, GDKoidLock);
-
-	t = OIDrand();
-	if (o > t)
-		t = o;
-	if (p >= t)
-		t = p;
-	return t;
-}
-
-/*
- * Initialize a sequence of OID seeds (for a sequence of database) as
- * stored in a string.
- */
-oid
-OIDread(str s)
-{
-	oid new = 0, *p = &new;
-	int l = sizeof(oid);
-
-	while (GDKisspace(*s))
-		s++;
-	while (GDKisdigit(*s)) {
-		s += OIDfromStr(s, &l, &p);
-		while (GDKisspace(*s))
-			s++;
-		new = OIDseed(new);
-	}
-	return new;
-}
-
-/*
- * Write the current sequence of OID seeds to a file in string format.
- */
-int
-OIDwrite(FILE *f)
-{
-	int ret = 0;
-	ATOMIC_TYPE o;
-
-	MT_lock_set(&MT_system_lock);
-	o = ATOMIC_GET(GDKoid, GDKoidLock);
-	if (o) {
-		GDKflushed = (oid) o;
-		if (fprintf(f, OIDFMT "@0", GDKflushed) < 0 || ferror(f))
-			ret = -1;
-	}
-	MT_lock_unset(&MT_system_lock);
-	return ret;
-}
-
-int
-OIDdirty(void)
-{
-	int ret;
-	MT_lock_set(&MT_system_lock);
-	ret = (oid) ATOMIC_GET(GDKoid, GDKoidLock) > GDKflushed;
-	MT_lock_unset(&MT_system_lock);
-	return ret;
-}
-
-/*
- * Reserve a range of unique OIDs
- */
-oid
-OIDnew(oid inc)
-{
-	return (oid) ATOMIC_ADD(GDKoid, (ATOMIC_TYPE) inc, GDKoidLock);
-}
-
-/*
  * String conversion routines.
  */
 int
